# Daily-AI-Reading-Reinforcement

./: .gitignore  AGENTS.md  CHANGELOG.md  DAIRR.spec  README.md  TODO.md  api_bundle.yaml  desktop_app.py  desktop_native.py  final_upload.sh  fix_upload.sh  fix_upload2.sh  maimemo_openapi_schemas.md  new_desc.html  package_addon.py  package_desktop.py  package_tauri_sidecar.py  patch.py  patch_daywindow.py  patch_deck.py  patch_init.py  requirements-desktop.txt  take_better_screenshot.py  take_screenshot.py  update_ankiweb.sh  update_ankiweb_desc.sh  upload_ankiweb.sh
.codex/: DAIRR_RELEASE_TASKS.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md  dairr-backend-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
desktop_mock/: README.md  ankiconnect_card_saver.py  ankiconnect_data_adapter.py  ankiconnect_provider.py  credential_store.py  dairr_core_runtime.py  desktop_adapters.py  desktop_paths.py  diagnostics.py  dump_today.py  enrichment.py  enrichment_factory.py  learning_sources.py  main.py  mock_data.py  momo_api_notes.md  momo_api_probe.py  momo_provider.py  momo_real_probe_summary.md  probe_limits.py  real_momo_provider.py  test_config.py
docs/: desktop_acceptance_2026-07-08.md  desktop_auto_updates.md  desktop_package_acceptance_2026-07-08.md  desktop_standalone.md  manual-verification.md  native_shell.md  packaging.md  release-notes-next-major.md  user-guide.md
scripts/: desktop_release.py
(+126 files in other folders)
