[package]
name = "dairr-desktop"
version = "0.1.0"
description = "Tauri proof-of-concept shell for Daily AI Reading Reinforcement"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
serde_json = "1"
tauri = { version = "2", features = [] }
